2007-06-10  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) import
	method.

	* lib/gluon/view.rb: (Gluon::ViewRenderer class) view directory
	and view rendering method are collected to one place.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) frame method.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) target
	attribute of link method.

	* test/test_dispatcher.rb: unit test for dispatcher.

	* test/test_action.rb: unit test for action.

	* test/test_po.rb: unit test for presentation object.

	* test/Rakefile, test/run.rb: utilities for unit test.

	* lib/gluon/builder.rb: path expansion: `@?' -> application base
	directory.

	* bin/gluon_setup.rb, lib/gluon/setup.rb: setup tool.
	`run' directory of initial application skeleton.

	* lib/gluon.rb: project start.
