@@ -1,0 +1,26 @@
+# example top page
+
+class Example
+  class Menu
+  end
+
+  class Value
+  end
+
+  class Cond
+  end
+
+  class Foreach
+  end
+
+  class Link
+  end
+
+  class Import
+  end
+end
+
+# Local Variables:
+# mode: Ruby
+# indent-tabs-mode: nil
+# End:
