@@ -1,9 +1,6 @@
 # Welcom application
 
 class Welcom
-  # for ident(1)
-  CVS_ID = '$Id$'
-
   def title
     'Welcom to Gluon'
   end
