@@ -1,0 +1,9 @@
+<html>
+<head>
+<title>gluon example</title>
+</head>
+<frameset cols="20%,80%">
+  <%= frame_path '/example/menu', :name => 'menu' %>
+  <%= frame_path '/example/value', :name => 'main' %>
+</frameset>
+</html>
