@@ -10,7 +10,7 @@
 application.</p>
 
 <h2>Examples</h2>
-<p><em>not implemented...</em></p>
+<p>see <%= link_path '/example', :text => 'example' %></p>
 
 <hr />
 <address>
